src/TigerParser.java
// Generated from Tiger.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TigerParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=1, IF=2, THEN=3, ELSE=4, WHILE=5, FOR=6, DO=7, BREAK=8, LET=9, 
		IN=10, END=11, OF=12, TO=13, TYPE=14, VAR=15, ARRAY=16, COLON=17, LEFTBRACE=18, 
		RIGHTBRACE=19, LEFTBRACKET=20, RIGHTBRACKET=21, LEFTPARENTHESIS=22, RIGHTPARENTHESIS=23, 
		EQUAL=24, MINUS=25, PLUS=26, TIMES=27, DIV=28, ASSIGN=29, COMMA=30, QUOTE=31, 
		GT=32, NE=33, LT=34, GE=35, LE=36, AND=37, OR=38, SEMICOLON=39, DOT=40, 
		BACKSLASH=41, TYPEINT=42, TYPESTRING=43, NIL=44, INT=45, STRING=46, ID=47, 
		FORMATCHAR=48, COMMENT=49;
	public static final String[] tokenNames = {
		"<INVALID>", "'function'", "'if'", "'then'", "'else'", "'while'", "'for'", 
		"'do'", "'break'", "'let'", "'in'", "'end'", "'of'", "'to'", "'type'", 
		"'var'", "'array'", "':'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'='", 
		"'-'", "'+'", "'*'", "'/'", "':='", "','", "'\"'", "'>'", "'<>'", "'<'", 
		"'>='", "'<='", "'&'", "'|'", "';'", "'.'", "'\\'", "'int'", "'string'", 
		"'nil'", "INT", "STRING", "ID", "FORMATCHAR", "COMMENT"
	};
	public static final int
		RULE_prog = 0, RULE_decs = 1, RULE_dec = 2, RULE_tydecs = 3, RULE_tydec = 4, 
		RULE_ty = 5, RULE_tyfields = 6, RULE_typeid = 7, RULE_vardec = 8, RULE_fundecs = 9, 
		RULE_fundec = 10, RULE_lvalue = 11, RULE_exp = 12, RULE_functioncall = 13, 
		RULE_recordcreation = 14, RULE_arraycreation = 15, RULE_assignexp = 16, 
		RULE_ifexp = 17, RULE_whileexp = 18, RULE_forexp = 19, RULE_breakexp = 20, 
		RULE_letexp = 21;
	public static final String[] ruleNames = {
		"prog", "decs", "dec", "tydecs", "tydec", "ty", "tyfields", "typeid", 
		"vardec", "fundecs", "fundec", "lvalue", "exp", "functioncall", "recordcreation", 
		"arraycreation", "assignexp", "ifexp", "whileexp", "forexp", "breakexp", 
		"letexp"
	};

	@Override
	public String getGrammarFileName() { return "Tiger.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public TigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44); exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecsContext extends ParserRuleContext {
		public List<DecContext> dec() {
			return getRuleContexts(DecContext.class);
		}
		public DecContext dec(int i) {
			return getRuleContext(DecContext.class,i);
		}
		public DecsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterDecs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitDecs(this);
		}
	}

	public final DecsContext decs() throws RecognitionException {
		DecsContext _localctx = new DecsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << TYPE) | (1L << VAR))) != 0)) {
				{
				{
				setState(46); dec();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public TydecsContext tydecs() {
			return getRuleContext(TydecsContext.class,0);
		}
		public FundecsContext fundecs() {
			return getRuleContext(FundecsContext.class,0);
		}
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitDec(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec);
		try {
			setState(55);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(52); tydecs();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(53); vardec();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(54); fundecs();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TydecsContext extends ParserRuleContext {
		public TydecContext tydec(int i) {
			return getRuleContext(TydecContext.class,i);
		}
		public List<TydecContext> tydec() {
			return getRuleContexts(TydecContext.class);
		}
		public TydecsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tydecs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTydecs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTydecs(this);
		}
	}

	public final TydecsContext tydecs() throws RecognitionException {
		TydecsContext _localctx = new TydecsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tydecs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(57); tydec();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(60); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TydecContext extends ParserRuleContext {
		public TyContext ty() {
			return getRuleContext(TyContext.class,0);
		}
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(TigerParser.EQUAL, 0); }
		public TerminalNode TYPE() { return getToken(TigerParser.TYPE, 0); }
		public TydecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tydec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTydec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTydec(this);
		}
	}

	public final TydecContext tydec() throws RecognitionException {
		TydecContext _localctx = new TydecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tydec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); match(TYPE);
			setState(63); typeid();
			setState(64); match(EQUAL);
			setState(65); ty();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TyContext extends ParserRuleContext {
		public TerminalNode RIGHTBRACE() { return getToken(TigerParser.RIGHTBRACE, 0); }
		public TerminalNode LEFTBRACE() { return getToken(TigerParser.LEFTBRACE, 0); }
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode OF() { return getToken(TigerParser.OF, 0); }
		public TyfieldsContext tyfields() {
			return getRuleContext(TyfieldsContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(TigerParser.ARRAY, 0); }
		public TyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTy(this);
		}
	}

	public final TyContext ty() throws RecognitionException {
		TyContext _localctx = new TyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ty);
		try {
			setState(75);
			switch (_input.LA(1)) {
			case TYPEINT:
			case TYPESTRING:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(67); typeid();
				}
				break;
			case LEFTBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(68); match(LEFTBRACE);
				setState(69); tyfields();
				setState(70); match(RIGHTBRACE);
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); match(ARRAY);
				setState(73); match(OF);
				setState(74); typeid();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TyfieldsContext extends ParserRuleContext {
		public List<TerminalNode> COLON() { return getTokens(TigerParser.COLON); }
		public TerminalNode ID(int i) {
			return getToken(TigerParser.ID, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(TigerParser.COMMA, i);
		}
		public TypeidContext typeid(int i) {
			return getRuleContext(TypeidContext.class,i);
		}
		public List<TypeidContext> typeid() {
			return getRuleContexts(TypeidContext.class);
		}
		public List<TerminalNode> ID() { return getTokens(TigerParser.ID); }
		public List<TerminalNode> COMMA() { return getTokens(TigerParser.COMMA); }
		public TerminalNode COLON(int i) {
			return getToken(TigerParser.COLON, i);
		}
		public TyfieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tyfields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTyfields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTyfields(this);
		}
	}

	public final TyfieldsContext tyfields() throws RecognitionException {
		TyfieldsContext _localctx = new TyfieldsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tyfields);
		int _la;
		try {
			setState(90);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(77); match(ID);
				setState(78); match(COLON);
				setState(79); typeid();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(80); match(COMMA);
					setState(81); match(ID);
					setState(82); match(COLON);
					setState(83); typeid();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case RIGHTBRACE:
			case RIGHTPARENTHESIS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeidContext extends ParserRuleContext {
		public TerminalNode TYPEINT() { return getToken(TigerParser.TYPEINT, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode TYPESTRING() { return getToken(TigerParser.TYPESTRING, 0); }
		public TypeidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTypeid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTypeid(this);
		}
	}

	public final TypeidContext typeid() throws RecognitionException {
		TypeidContext _localctx = new TypeidContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEINT) | (1L << TYPESTRING) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(TigerParser.COLON, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode VAR() { return getToken(TigerParser.VAR, 0); }
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(TigerParser.ASSIGN, 0); }
		public VardecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterVardec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitVardec(this);
		}
	}

	public final VardecContext vardec() throws RecognitionException {
		VardecContext _localctx = new VardecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vardec);
		try {
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94); match(VAR);
				setState(95); match(ID);
				setState(96); match(COLON);
				setState(97); typeid();
				setState(98); match(ASSIGN);
				setState(99); exp(0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101); match(VAR);
				setState(102); match(ID);
				setState(103); match(ASSIGN);
				setState(104); exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FundecsContext extends ParserRuleContext {
		public List<FundecContext> fundec() {
			return getRuleContexts(FundecContext.class);
		}
		public FundecContext fundec(int i) {
			return getRuleContext(FundecContext.class,i);
		}
		public FundecsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundecs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFundecs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFundecs(this);
		}
	}

	public final FundecsContext fundecs() throws RecognitionException {
		FundecsContext _localctx = new FundecsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fundecs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(107); fundec();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FundecContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(TigerParser.COLON, 0); }
		public TerminalNode LEFTPARENTHESIS() { return getToken(TigerParser.LEFTPARENTHESIS, 0); }
		public TerminalNode FUNCTION() { return getToken(TigerParser.FUNCTION, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RIGHTPARENTHESIS() { return getToken(TigerParser.RIGHTPARENTHESIS, 0); }
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TyfieldsContext tyfields() {
			return getRuleContext(TyfieldsContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(TigerParser.EQUAL, 0); }
		public FundecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFundec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFundec(this);
		}
	}

	public final FundecContext fundec() throws RecognitionException {
		FundecContext _localctx = new FundecContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fundec);
		try {
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112); match(FUNCTION);
				setState(113); match(ID);
				setState(114); match(LEFTPARENTHESIS);
				setState(115); tyfields();
				setState(116); match(RIGHTPARENTHESIS);
				setState(117); match(EQUAL);
				setState(118); exp(0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120); match(FUNCTION);
				setState(121); match(ID);
				setState(122); match(LEFTPARENTHESIS);
				setState(123); tyfields();
				setState(124); match(RIGHTPARENTHESIS);
				setState(125); match(COLON);
				setState(126); typeid();
				setState(127); match(EQUAL);
				setState(128); exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LvalueContext extends ParserRuleContext {
		public int _p;
		public TerminalNode RIGHTBRACKET() { return getToken(TigerParser.RIGHTBRACKET, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode DOT() { return getToken(TigerParser.DOT, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode LEFTBRACKET() { return getToken(TigerParser.LEFTBRACKET, 0); }
		public LvalueContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LvalueContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_lvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterLvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitLvalue(this);
		}
	}

	public final LvalueContext lvalue(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LvalueContext _localctx = new LvalueContext(_ctx, _parentState, _p);
		LvalueContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, RULE_lvalue);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(133); match(ID);
			}
			_ctx.stop = _input.LT(-1);
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(143);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new LvalueContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_lvalue);
						setState(135);
						if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
						setState(136); match(LEFTBRACKET);
						setState(137); exp(0);
						setState(138); match(RIGHTBRACKET);
						}
						break;

					case 2:
						{
						_localctx = new LvalueContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_lvalue);
						setState(140);
						if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
						setState(141); match(DOT);
						setState(142); match(ID);
						}
						break;
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
